# fastapi-ecommerce

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 48e8cd42e011_removed_username_column.py  5eaa482866c4_initial_migration.py  d1245a765b38_initial_migration.py
app/: main.py
app/api/v1/: user_router.py
app/core/: config.py  security.py
app/db/: init_db.py
app/models/: user.py
app/repositories/: redis_repository.py  user_repository.py
app/schemas/: user.py
app/services/: user_service.py
